Bug 1678656 - Don't rely on mPlanes to compute RenderTextureHost size, since it's only initialized when used with SWGL. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D104141