gfx/webrender_bindings/RenderSharedSurfaceTextureHostSWGL.h
@@ -37,6 +37,8 @@ class RenderSharedSurfaceTextureHostSWGL final : public RenderTextureHostSWGL {
 
   void UnmapPlanes() override;
 
+  size_t Bytes() override { return BytesFromPlanes(); }
+
  private:
   virtual ~RenderSharedSurfaceTextureHostSWGL();
 
